css/styles.css
/* ... */
/* Font-Family: 'Julius Sans One', Sans-Serif;
Font-Size: 45px;
Font-Family: 'Monda', Sans-Serif;
Font-Size: 16px; */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.card > .alec-middle {
    transform: translateX(10%);
}

.card > .alec-middle .figcaption{
    transform: translateX(10%);
}

.background-gradient::before {
  content: '';
  width: 32%;
  background-image: linear-gradient(144deg, rgba(159,128,71,1) 7%, rgba(235,189,106,1) 21%, rgba(255,255,255,1) 75%, rgba(235,189,106,1) 92%, rgba(159,128,71,1) 100%);
  filter: blur(1.5em)
}

.background-gradient {
  background: rgb(159,128,71);
  background-image: linear-gradient(144deg, rgba(159,128,71,1) 7%, rgba(235,189,106,1) 21%, rgba(255,255,255,1) 75%, rgba(235,189,106,1) 92%, rgba(159,128,71,1) 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-background-clip: text;
  -moz-text-fill-color: transparent;
  width: 100%;
}

.bengal {
  max-width: 56%;
  margin-left: 60%;
  height: auto;
  margin-top: calc(100vh/19);
  filter: invert(1) hue-rotate(12deg);
}

blockquote {
  border-left: solid #9F8047 2px;
  padding: 2em 2em 2em 4em;
  Font-Family: 'Monda', Sans-Serif;
  Font-Size: .75em;
  color: white;
  background: rgb(159,128,71);
  background: linear-gradient(90deg, rgba(159,128,71,0) 0%, rgba(159,128,71,0.17130602240896353) 4%, rgba(159,128,71,1) 4%, rgba(159,128,71,0) 73%);
  margin-top: 2em;
}

body {
  background-color: black;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  min-height: 100%;
  width: 100%;
}

.card {
    display: flex;
    flex-flow: column;
    padding: 2.15em 2.15em 6em 2.15em;
    margin: 0 auto 0 auto;
    width: 50%;
    color: white;
    font-size: 22px;
    min-height: fit-content;
}

.card:nth-child(even) {
    border-left: solid #9F8047 2px;
    border-radius: 10px 0px 10px 10px;
    transform: translate(-5px, 0px);
    border-width: 3px;
}

.card:nth-child(even):hover,.card:nth-child(even):focus {
  -webkit-box-shadow: inset 30vw 10px 122px -20px rgba(14,18,89,.8);
  -moz-box-shadow: inset 30vw 10px 122px -20px rgba(14,18,89,.8);
  box-shadow: inset 30vw 10px 122px -20px rgba(14,18,89,.8);
  transition: all .5s ease;
}

.card:nth-child(even) > h3::before {
  content: '';
  position: absolute;
  width: 1em;
  height: 1em;
  background: transparent;
  border-radius: 999px;
  border: 3px solid #9F8047;
  transform: translate(-67px, -2px);
}

.card:nth-child(odd) {
  border-right: solid #9F8047 2px;
  border-top: solid #9F8047 2px;
  border-bottom: solid #9F8047 2px;
  border-radius: 0px 10px 10px 0px;
}

.card:nth-child(odd) > h3::before {
  content: '';
  position: absolute;
  width: 1em;
  height: 1em;
  background: transparent;
  border-radius: 999px;
  border: 3px solid #9F8047;
  transform: translate(67px, -2px);
}

.card:nth-child(odd) > h3, .card:nth-child(odd)  > p {
  display: flex;
  justify-content: right
}

.container {
  width: 100%;
}

.covid {
  width: 90%;
  padding: 2em 2em 1em 2em;
}

.down-arrow {
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    border-top: 40px solid #9F8047;
    height: 0;
    left: 13vw;
    position: sticky;
    top: 87.9vh;
    width: 0;
}

figcaption {
  font-size: .55em;
  Font-Family: 'Julius Sans One', Sans-Serif;
  padding: 0em;
  margin-left: 4em;
  width: 80%;
}

.figure-alec {
  display: flex;
  flex-direction: row-reverse;
  transform: translateX(33%);
}

.flush-left {
  width: 56%;
  margin-left: auto;
  padding: 2em 0 2em 0;
  text-align: left;
}

.flush-right {
  width: 58%;
  padding: 2em 0 2em 0;
  margin-left: auto;
  text-align: right;
}

#event_1 {
  top: -26vh;
  height: 54vh;
}

.img-alec {
  max-width: 100%;
  margin-left: 0;
  height: auto;
  margin-top: calc(100vh/19);
}

.fig-caption-11 {
  font-size: .55em;
  Font-Family: 'Julius Sans One', Sans-Serif;
  padding: 3em;
  margin-left: 0;
  width: 26%;
  margin-top: 1em;
  overflow-wrap: break-word;
}

.fig-caption-31 {
  font-size: .55em;
  Font-Family: 'Julius Sans One', Sans-Serif;
  padding: 0em;
  margin-left: 26em;
  width: 58%;
  margin-bottom: 2em;
}

.fig-caption-20 {
  width: 50%;
  margin: 0 0 0 38%;
}

html {
  min-height: 100%;
  scroll-behavior: smooth;
  width: 100%;
  zoom: 100%;
}

h3 {
  padding: 0 0 .5em 0;
  text-transform: uppercase;
  Font-Family: 'Julius Sans One', Sans-Serif;
  Font-Size: 1.5em;
}

h3:hover {
  background: #9F8047;
  background: -webkit-radial-gradient(circle farthest-corner at center center, #9F8047 0%, #EBBD6A 15%, #9F8047 100%);
  background: -moz-radial-gradient(circle farthest-corner at center center, #9F8047 0%, #EBBD6A 15%, #9F8047 100%);
  background: radial-gradient(circle farthest-corner at center center, #9F8047 0%, #EBBD6A 15%, #9F8047 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

img {
  max-width: 56%;
  margin-left: 44%;
  height: auto;
  margin-top: calc(100vh/19);
}

.img-baby-katherine {
  object-fit: cover;
  width: 25em;
  height: 25em;
  object-position: 50% 50%;
  filter: contrast(1.2);
  transform: translateX(59%);
}

.img-baby-brooklyn {
  object-fit: cover;
  width: 20em;
  height: 20em;
  object-position: 50% 50%;
  transform: translate(100%, 0%);
}

.img-baby-brooklyn-valentines {
  max-width: none;
  width: 120%;
}

.img-seven-brides {
  width: 39em;
  object-position: 50% 50%;
  height: 22em;
  object-fit: cover;
  max-width: 100%;
}

.img-school-katherine {
  object-fit: cover;
  width: 25em;
  height: 25em;
  object-position: 50% 28%;
  transform: translateX(24%);
}


.img-kat-chair {
  max-width: 100%;
  transform: translateX(5%);
}

.img-div {
  display: block;
  width: 100%;
  height: auto;
  min-height: 100vh;
  min-width: 100%;
  top: 0;
  left: 0;
}

.img-balance-rock {
  max-width: 170%;
  margin-left: 0;
  transform: translateX(-20%);
  z-index: -433;
  position: relative;
}
/* ... */

